--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
                 <p><button>Contact</button></p>
     </nav>
     </header>
+    <section class="card">
+
+        <img src="assets/images/profile8bit.png" alt="8bit-profile" class="img2">
+        <h1>About Me</h1>
+        <br>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat eum facere modi non expedita officia pariatur sed nesciunt, magni dolore ipsum ducimus consequatur deleniti saepe minus ab autem rerum? Qui!</p>
+
+    </section>
     <footer>
         
     </footer>
