--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     </nav>
     </header>
     <section class="card">
-
         <img src="assets/images/profile8bit.png" alt="8bit-profile" class="img2">
         <h1>About Me</h1>
         <br>
-       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat eum facere modi non expedita officia pariatur sed nesciunt, magni dolore ipsum ducimus consequatur deleniti saepe minus ab autem rerum? Qui!</p>
+       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat eum facere modi non expedita officia pariatur sed nesciunt, magni dolore ipsum ducimus consequatur deleniti saepe minus ab autem rerum? Qui!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque tenetur doloribus unde ipsum magnam, porro asperiores ut, minus voluptatibus molestiae aspernatur assumenda repudiandae libero repellendus accusamus animi? Dolores, possimus amet!
+       </p>
 
     </section>
     <footer>
