--- a/index.html
+++ b/index.html
@@ -15,17 +15,28 @@
                 <p><button>Contact</button></p>
     </nav>
     </header>
-    <section class="card">
+    <main>
+        <aside>
         <img src="assets/images/profile8bit.png" alt="8bit-profile" class="img2">
-        <h1>About Me</h1>
-        <br>
+        <h2>About Me</h2>
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat eum facere modi non expedita officia pariatur sed nesciunt, magni dolore ipsum ducimus consequatur deleniti saepe minus ab autem rerum? Qui!
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque tenetur doloribus unde ipsum magnam, porro asperiores ut, minus voluptatibus molestiae aspernatur assumenda repudiandae libero repellendus accusamus animi? Dolores, possimus amet!
        </p>
-
-    </section>
-    <footer>
-        
+    </aside>
+    <div class="projects">
+        <section class="card">
+          <h1>Project 1</h1r>
+        </section>
+        <section class="card">
+            <h1>Project 2</h1r>
+        </section>
+        <section class="card">
+            <h1>Contact</h1r>
+        </section>
+            
+</main>
+        <footer>
+        <p>cw</p>
     </footer>
 </body>
 </html>
